# rl-stats-overlay

./: .gitignore  CLAUDE.md  LICENSE  NOTICES.md  README.en.md  README.md  THEMES.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
dev/: README.md  mock-control.html  mock-server.ts
docs/: development.md  obs-setup.md  stats-api-reference.md  themes-en.md  themes-fr.md  troubleshooting.md
overlays/launcher/: launcher.css  launcher.html  launcher.js
overlays/shared/: session-overlay.js  ws-client.js
overlays/themes/_shared/: menu.css  menu.js
overlays/themes/_template/: README.md  boost.css  boost.html  boost.js  theme.json
overlays/themes/circle/: boost.css  boost.html  boost.js  theme.json
overlays/themes/default/: boost.css  boost.html  boost.js  theme.json
overlays/themes/minimal/: boost.css  boost.html  boost.js  theme.json
overlays/themes/redesigned/: boost.css  boost.html  boost.js  theme.json
src/: i18n.ts  index.html  main.ts  style.css  wizard.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: http_server.rs  ini_patcher.rs  lib.rs  main.rs  platform_detect.rs  rl_process.rs  session.rs  settings.rs  settings_writer.rs  state.rs  theme_manifest.rs  ws_client.rs
