[package]
name = "rl-stats-overlay"
version = "0.1.2"
description = "Rocket League stats overlays for OBS and in-game HUD"
authors = ["Kévin De Jesus Ferreira <kevin@kapps-mobile.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "rl_stats_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Async runtime + HTTP / WS
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence + filesystem
dirs = "5"
rust-ini = "0.21"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

# Concurrency
parking_lot = "0.12"
once_cell = "1"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Windows-only — registry lookups for Steam / Epic install paths
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
