[package]
name = "rl-stats-overlay"
version = "0.1.3"
description = "Rocket League stats overlays for OBS and in-game HUD"
authors = ["Kévin De Jesus Ferreira <kevin@kapps-mobile.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "rl_stats_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Async runtime + HTTP / WS
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence + filesystem
dirs = "5"
rust-ini = "0.21"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

# Concurrency
parking_lot = "0.12"
once_cell = "1"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI flags
clap = { version = "4", features = ["derive"] }

# TCP socket-level keepalive — bounds the time it takes us to detect that
# Rocket League went away (graceful close → near-instant; ungraceful close /
# crash → ~11 s instead of the kernel default of 2 hours).
socket2 = { version = "0.5", features = ["all"] }

# Windows-only — registry lookups for Steam / Epic install paths,
# plus a process-snapshot probe used by `rl_process` to detect when
# RocketLeague.exe vanishes (the Stats API socket gives no FIN on a
# user-clicked Quit, and Windows hard-codes 10 keep-alive probes, so
# kernel-level disconnect detection takes ~8 s — polling the process
# list collapses that to <1 s).
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
